display sign in button on mobile screen, error notifications, fix end date of a match, add popups

--- a/src/components/Schedule/Schedule.css
+++ b/src/components/Schedule/Schedule.css
@@ -22,13 +22,16 @@
 	background-color: gainsboro;
 }
 
-.sidebar-toggle {
+.mobile-bar {
 	margin: 5px 0;
 	display: flex;
-	flex-direction: row;
 	align-items: center;
-	justify-content: space-between;
-	align-items: center;
+}
+
+.mobile-bar-buttons {
+	flex-grow: 1;
+	display: flex;
+	justify-content: flex-end;
 }
 
 #mobile-bar {
@@ -42,5 +45,9 @@
 @media (max-width: 767px) {
 	#match-list-column {
 		padding: 0 !important;
+	}
+
+	.locale-input {
+		margin: 0 10px 0 0 !important;
 	}
 }
